--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -37,129 +37,137 @@
 </div>
 
 <section>
-<div class="w-full flex justify-center">
-    <div class="grid w-full grid-cols-6 gap-4">     
-        <div class="col-span-4 col-start-2 w-full flex justify-center">            
-            <div class="container-w980 w-full">
-                <div class="grid grid-cols-12 gap-y-8">
-                    <div class="accordion-static col-span-full w-full">
-                        <!-- Item 1 -->
-                        <details name="acc" class="group">
-                            <summary
-                                class="flex items-center justify-between cursor-pointer p-4 select-none
-                                transition-colors open:bg-blue-50 open:text-blue-700
-                                [&::-webkit-details-marker]:hidden">
-                                <span class="static-acc-title">{{ element_2.accordion_1_title }}</span>
-                                <!-- chevron -->
-                                <svg width="16px" height="16px" class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-                                </svg>
-                            </summary>
-                            <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
-                                <div class="p-4 pt-0 text-sm accordion-static-body">
-                                    {{ element_2.accordion_1_body }}
-                                </div>
-                            </div>
-                        </details>
-
-                        <!-- Item 2 -->
-                        <details name="acc" class="group">
-                            <summary
-                                class="flex items-center justify-between cursor-pointer p-4 select-none
-                                transition-colors open:bg-blue-50 open:text-blue-700
-                                [&::-webkit-details-marker]:hidden">
-                                <span class="static-acc-title">{{ element_2.accordion_2_title }}</span>
-                                <svg width="16px" height="16px" class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-                                </svg>
-                            </summary>
-                            <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
-                                <div class="p-4 pt-0 text-sm accordion-static-body">
-                                    {{ element_2.accordion_2_body }}
-                                </div>
-                            </div>
-                        </details>
-
-                        <!-- Item 3 -->
-                        <details name="acc" class="group">
-                            <summary
-                                class="flex items-center justify-between cursor-pointer p-4 select-none
-                                transition-colors open:bg-blue-50 open:text-blue-700
-                                [&::-webkit-details-marker]:hidden">
-                                <span class="static-acc-title">{{ element_2.accordion_3_title }}</span>
-                                <svg width="16px" height="16px" class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-                                </svg>
-                            </summary>
-                            <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
-                                <div class="p-4 pt-0 text-sm accordion-static-body">
-                                    {{ element_2.accordion_3_body }}
-                                </div>
-                            </div>
-                        </details>
-
-                        <details name="acc" class="group">
-                            <summary
-                                class="flex items-center justify-between cursor-pointer p-4 select-none
-                                transition-colors open:bg-blue-50 open:text-blue-700
-                                [&::-webkit-details-marker]:hidden">
-                                <span class="static-acc-title">{{ element_2.accordion_4_title }}</span>
-                                <svg width="16px" height="16px" class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-                                </svg>
-                            </summary>
-                            <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
-                                <div class="p-4 pt-0 text-sm accordion-static-body">
-                                    {{ element_2.accordion_4_body }}
-                                </div>
-                            </div>
-                        </details>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</div>
-</section>
-
-
-<section>
-<!-- ELEMENT 3 - BOX -->
-<div class="w-full flex justify-center">
-
-    <div class="grid grid-cols-6 gap-4">     
-
-        <div class="col-span-4 col-start-2">
-            <div class="w-full ">
-                <div class="container mission-container">
+    <div class="w-full flex justify-center">
+        <div class="grid w-full grid-cols-6 gap-4">     
+            <div class="col-span-4 col-start-2 w-full flex justify-center">            
+                <div class="container-w980 w-full">
                     <div class="grid grid-cols-12 gap-y-8">
-                        <div class="col-span-12 lg:col-span-6">
-                            <div class="text-center xl:text-left">
-                                <h5 class="section-header-title-small text-start">
-                                    {{ element_3.header_title_small }}
-                                </h5>
-                                <h2 id="costs" class="section-header-title text-start">
-                                    {{ element_3.header_title }}
-                                    <a href="#costs" class="anchor-link" aria-label="Link to this section: Costs">#</a>
-                                </h2>
-                                <p>
-                                    {{ element_3.text }}
-                                </p>
-                            </div>
-                        </div>
+                        <div class="accordion-static col-span-full w-full">
+                            <!-- Item 1 -->
+                            <details name="acc" class="group">
+                                <summary
+                                    class="flex items-center justify-between cursor-pointer p-4 select-none
+                                    transition-colors open:bg-blue-50 open:text-blue-700
+                                    [&::-webkit-details-marker]:hidden">
+                                    <span class="static-acc-title">{{ element_2.accordion_1_title }}</span>
+                                    <!-- chevron -->
+                                    <svg width="16px" height="16px" class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
+                                    </svg>
+                                </summary>
+                                <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                                    <div class="p-4 pt-0 text-sm accordion-static-body">
+                                        {{ element_2.accordion_1_body }}
+                                    </div>
+                                </div>
+                            </details>
 
-                        <div class="col-span-12 lg:col-span-6 text-center">
-                            <img class="img-fluid mission-main-img" src="/browser/images/common/Kosten-Nora.png" alt="..." width="523" height="439">
+                            <!-- Item 2 -->
+                            <details name="acc" class="group">
+                                <summary
+                                    class="flex items-center justify-between cursor-pointer p-4 select-none
+                                    transition-colors open:bg-blue-50 open:text-blue-700
+                                    [&::-webkit-details-marker]:hidden">
+                                    <span class="static-acc-title">{{ element_2.accordion_2_title }}</span>
+                                    <svg width="16px" height="16px" class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
+                                    </svg>
+                                </summary>
+                                <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                                    <div class="p-4 pt-0 text-sm accordion-static-body">
+                                        {{ element_2.accordion_2_body }}
+                                    </div>
+                                </div>
+                            </details>
+
+                            <!-- Item 3 -->
+                            <details name="acc" class="group">
+                                <summary
+                                    class="flex items-center justify-between cursor-pointer p-4 select-none
+                                    transition-colors open:bg-blue-50 open:text-blue-700
+                                    [&::-webkit-details-marker]:hidden">
+                                    <span class="static-acc-title">{{ element_2.accordion_3_title }}</span>
+                                    <svg width="16px" height="16px" class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
+                                    </svg>
+                                </summary>
+                                <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                                    <div class="p-4 pt-0 text-sm accordion-static-body">
+                                        {{ element_2.accordion_3_body }}
+                                    </div>
+                                </div>
+                            </details>
+
+                            <details name="acc" class="group">
+                                <summary
+                                    class="flex items-center justify-between cursor-pointer p-4 select-none
+                                    transition-colors open:bg-blue-50 open:text-blue-700
+                                    [&::-webkit-details-marker]:hidden">
+                                    <span class="static-acc-title">{{ element_2.accordion_4_title }}</span>
+                                    <svg width="16px" height="16px" class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
+                                    </svg>
+                                </summary>
+                                <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                                    <div class="p-4 pt-0 text-sm accordion-static-body">
+                                        {{ element_2.accordion_4_body }}
+                                    </div>
+                                </div>
+                            </details>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+
+<!-- ELEMENT 3 - BOX -->
+<section style="margin-top: 3rem;">    
+    <div class="container-w980 mx-auto">
+        <div class="container mission-container">
+            <div class="w-full flex justify-center">
+                <div class="col-span-12">
+                    <div class="w-full">
+                        <div class="">
+                            <h5 class="section-header-title-small flex justify-center items-center">
+                                {{ element_3.header_title_small }}
+                            </h5>
+                            <h2 class="section-header-title flex justify-center" id="costs">
+                                {{ element_3.header_title }}&nbsp;<a class="anchor-link" href="#costs" aria-label="{{ element_3.header_title }}">#</a>
+                            </h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class='flex w-full'>
+                <div class='flex gap-6 w-full'>
+                    <div class='w-full w-1/2'>
+
+                        <div class="xl:text-left">
+                            <p>
+                                {{ element_3.text }}
+                            </p>
+                        </div>
+                    </div>
+                    <div class='w-full w-1/2'>
+                        <div class="text-center">
+                            <img class="max-w-full h-auto mission-main-img" src="/browser/images/common/Kosten-Nora.png" alt="..." width="523" height="439">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-</div>
+    </div>
 </section>
+
 
 
 <!-- ELEMENT 4 four cards -->
@@ -167,16 +175,16 @@
 <!-- CARDS HEADER -->
 <section class="w-full bg-white " style="margin-top: 3rem;">    
     <div class="mx-auto w-full max-w-6xl px-6">
-            <div class="static-heading-div text-center">
-                <h1 class="section-header-title-small">
-                     {{ cards.cards_header_title_small }}
-                </h1>
-                <h2 class="section-header-title" id="how-does-the-data-deposition-work">
-                     {{ cards.cards_header_title }}
-                </h2>
-            </div>            
-        </div>
-    
+        <div class="static-heading-div text-center">
+            <h1 class="section-header-title-small">
+                {{ cards.cards_header_title_small }}
+            </h1>
+            <h2 class="section-header-title" id="how-does-the-data-deposition-work">
+                {{ cards.cards_header_title }}
+            </h2>
+        </div>            
+    </div>
+
 </section>
 
 <!-- CARDS -->
