--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -44,9 +44,9 @@
                     <div class="grid grid-cols-12 gap-y-8">
                         <div class="accordion-static col-span-full w-full">
                             <!-- Item 1 -->
-                            <details name="acc" class="group">
+                            <details name="acc" class="group" open>
                                 <summary
-                                    class="flex items-center justify-between cursor-pointer p-4 select-none
+                                    class="bg-white flex items-center justify-between cursor-pointer p-4 select-none
                                     transition-colors open:bg-blue-50 open:text-blue-700
                                     [&::-webkit-details-marker]:hidden">
                                     <span class="static-acc-title">{{ element_2.accordion_1_title }}</span>
@@ -65,7 +65,7 @@
                             <!-- Item 2 -->
                             <details name="acc" class="group">
                                 <summary
-                                    class="flex items-center justify-between cursor-pointer p-4 select-none
+                                    class="bg-white flex items-center justify-between cursor-pointer p-4 select-none
                                     transition-colors open:bg-blue-50 open:text-blue-700
                                     [&::-webkit-details-marker]:hidden">
                                     <span class="static-acc-title">{{ element_2.accordion_2_title }}</span>
@@ -100,7 +100,7 @@
 
                             <details name="acc" class="group">
                                 <summary
-                                    class="flex items-center justify-between cursor-pointer p-4 select-none
+                                    class="bg-white flex items-center justify-between cursor-pointer p-4 select-none
                                     transition-colors open:bg-blue-50 open:text-blue-700
                                     [&::-webkit-details-marker]:hidden">
                                     <span class="static-acc-title">{{ element_2.accordion_4_title }}</span>
