--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -49,7 +49,7 @@
                                     class="bg-white flex items-center justify-between cursor-pointer p-4 select-none
                                     transition-colors open:bg-blue-50 open:text-white-700
                                     [&::-webkit-details-marker]:hidden">
-                                    <span class="static-acc-title">{{ element_2.accordion_1_title }}</span>
+                                    <span class="static-acc-title group-open:text-white">{{ element_2.accordion_1_title }}</span>
                                     <!-- chevron -->
                                     <svg width="16px" height="16px" class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                     <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
@@ -68,7 +68,7 @@
                                     class="bg-white flex items-center justify-between cursor-pointer p-4 select-none
                                     transition-colors open:bg-blue-50 open:text-white-700
                                     [&::-webkit-details-marker]:hidden">
-                                    <span class="static-acc-title">{{ element_2.accordion_2_title }}</span>
+                                    <span class="static-acc-title group-open:text-white">{{ element_2.accordion_2_title }}</span>
                                     <svg width="16px" height="16px" class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                     <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
                                     </svg>
@@ -86,7 +86,7 @@
                                     class="bg-white  flex items-center justify-between cursor-pointer p-4 select-none
                                     transition-colors open:bg-blue-50 open:text-white-700
                                     [&::-webkit-details-marker]:hidden">
-                                    <span class="static-acc-title">{{ element_2.accordion_3_title }}</span>
+                                    <span class="static-acc-title group-open:text-white">{{ element_2.accordion_3_title }}</span>
                                     <svg width="16px" height="16px" class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                     <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
                                     </svg>
@@ -103,7 +103,7 @@
                                     class="bg-white flex items-center justify-between cursor-pointer p-4 select-none
                                     transition-colors open:bg-blue-50 open:text-white-700
                                     [&::-webkit-details-marker]:hidden">
-                                    <span class="static-acc-title">{{ element_2.accordion_4_title }}</span>
+                                    <span class="static-acc-title group-open:text-white">{{ element_2.accordion_4_title }}</span>
                                     <svg width="16px" height="16px" class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                     <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
                                     </svg>
