--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -139,10 +139,10 @@
 
                         <div class="xl:text-left">
                             
-                            <h5 class="section-header-title-small flex justify-center items-center">
+                            <h5 class="section-header-title-small flex">
                                 {{ element_3.header_title_small }}
                             </h5>
-                            <h2 class="section-header-title flex justify-center" id="costs">
+                            <h2 class="section-header-title flex" id="costs">
                                 {{ element_3.header_title }}&nbsp;<a class="anchor-link" href="#costs" aria-label="{{ element_3.header_title }}">#</a>
                             </h2>
                         
