--- a/arche-react/en/deposition-agreement.html
+++ b/arche-react/en/deposition-agreement.html
@@ -130,7 +130,7 @@
 
 
 
-<section style="margin-bottom: 50px;">
+<section>
     <div class="container-w980 mx-auto">
         <div class="mx-auto w-full max-w-6xl px-6">
             <div class='flex w-full'>
