--- a/arche-react/en/deposition-agreement.html
+++ b/arche-react/en/deposition-agreement.html
@@ -1,3 +1,4 @@
+<section>
 <div class="w-full flex justify-center mt-10">
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
@@ -130,10 +131,10 @@
         </div>
     </div>
 </div>
+</section>
 
 
-
-
+<section>
 <div class="w-full flex justify-center">
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2">
@@ -149,3 +150,4 @@
     </div>
 </div>
 
+</section>
