--- a/arche-react/en/deposition-agreement.html
+++ b/arche-react/en/deposition-agreement.html
@@ -1,10 +1,9 @@
 <section>
-<div class="w-full flex justify-center mt-10">
-    <div class="grid grid-cols-6 gap-4">
-        <div class="col-span-4 col-start-2">
-            <div class="w-full ">
-                <div class="container-w980 bg-white p-[24px]">
-                    <div class="flex flex-col gap-8">
+    <div class="w-full flex justify-center">
+        <div class="grid w-full grid-cols-6 gap-4">     
+            <div class="col-span-4 col-start-2 w-full flex justify-center">            
+                <div class="container-w980 w-full">
+                    <div class="grid grid-cols-12 gap-y-8">
                         <p>
                             <strong>{{ element_1.intro }}</strong>
                         </p>
@@ -130,24 +129,24 @@
             </div>
         </div>
     </div>
-</div>
+
 </section>
 
 
 <section>
-<div class="w-full flex justify-center">
-    <div class="grid grid-cols-6 gap-4">
-        <div class="col-span-4 col-start-2">
-            <div class="w-full ">
-                <div class="container-w980">
-                    <div class="flex flex-col gap-8 justify-center">
-                        <a class="btn btn-arche-blue" href="https://raw.githubusercontent.com/acdh-oeaw/arche-static-text/main/DepositionAgreement/ARCHE_DepositionAgreement.pdf">Download PDF</a>
+    <div class="w-full flex justify-center">
+        <div class="grid grid-cols-6 gap-4">
+            <div class="col-span-4 col-start-2">
+                <div class="w-full ">
+                    <div class="container-w980">
+                        <div class="flex flex-col gap-8 justify-center">
+                            <a class="btn btn-arche-blue" href="https://raw.githubusercontent.com/acdh-oeaw/arche-static-text/main/DepositionAgreement/ARCHE_DepositionAgreement.pdf">Download PDF</a>
 
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 </section>
