--- a/arche-react/en/deposition-agreement.html
+++ b/arche-react/en/deposition-agreement.html
@@ -1,5 +1,5 @@
 <div class="static-page">
-    <section>
+    <section class="bg-white">
         <div class="w-full flex justify-center mt-[50px]">
             <div class="container-w980 w-full">
                 <p>
@@ -124,10 +124,7 @@
                 </div>
             </div>
         </div>
-    </section>
 
-
-    <section>
         <div class="w-full flex justify-center">
             <div class="grid grid-cols-6 gap-4">
                 <div class="col-span-4 col-start-2">
