--- a/arche-react/en/deposition-agreement.html
+++ b/arche-react/en/deposition-agreement.html
@@ -1,7 +1,7 @@
-<div class="static-page">
-    <section class="bg-white">
+<div class="static-pages">
+    <section class="">
         <div class="w-full flex justify-center mt-[50px]">
-            <div class="container-w980 w-full">
+            <div class="container-w980 w-full bg-white">
                 <p>
                     <strong>{{ element_1.intro }}</strong>
                 </p>
@@ -126,17 +126,9 @@
         </div>
 
         <div class="w-full flex justify-center">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full ">
-                        <div class="container-w980">
-                            <div class="flex flex-col gap-8 justify-center">
-                                <a class="btn btn-arche-blue" href="https://raw.githubusercontent.com/acdh-oeaw/arche-static-text/main/DepositionAgreement/ARCHE_DepositionAgreement.pdf">Download PDF</a>
+            <div class="container-w980 w-full bg-white justify-center">
+                <a class="btn btn-arche-blue" href="https://raw.githubusercontent.com/acdh-oeaw/arche-static-text/main/DepositionAgreement/ARCHE_DepositionAgreement.pdf">Download PDF</a>
 
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
 
