--- a/arche-react/en/deposition-agreement.html
+++ b/arche-react/en/deposition-agreement.html
@@ -1,7 +1,7 @@
 <div class="static-pages">
     <section class="">
         <div class="w-full flex justify-center mt-[50px]">
-            <div class="container-w980 w-full bg-white">
+            <div class="container-w980 w-full bg-white padding-[24px]">
                 <p>
                     <strong>{{ element_1.intro }}</strong>
                 </p>
@@ -126,7 +126,7 @@
         </div>
 
         <div class="w-full flex justify-center">
-            <div class="container-w980 w-full bg-white justify-center">
+            <div class="container-w980 flex w-full bg-white justify-center">
                 <a class="btn btn-arche-blue" href="https://raw.githubusercontent.com/acdh-oeaw/arche-static-text/main/DepositionAgreement/ARCHE_DepositionAgreement.pdf">Download PDF</a>
 
             </div>
