--- a/arche-react/en/deposition-agreement.html
+++ b/arche-react/en/deposition-agreement.html
@@ -126,7 +126,7 @@
         </div>
 
         <div class="w-full flex justify-center">
-            <div class="container-w980 flex w-full bg-white justify-center">
+            <div class="container-w980 flex w-full bg-white justify-center padding-[24px]">
                 <a class="btn btn-arche-blue" href="https://raw.githubusercontent.com/acdh-oeaw/arche-static-text/main/DepositionAgreement/ARCHE_DepositionAgreement.pdf">Download PDF</a>
 
             </div>
