--- a/arche-react/de/deposition-agreement.html
+++ b/arche-react/de/deposition-agreement.html
@@ -1,144 +1,132 @@
-<div class="w-full flex justify-center pt-20">
-    <div class="grid grid-cols-6 gap-4">
-        <div class="col-span-4 col-start-2">
-            <div class="w-full ">
-                <div class="container-w980">
-                    <div class="flex flex-col gap-8">
+<div class="static-pages">
+    <section class="">
+        <div class="w-full flex justify-center mt-[50px]">
+            <div class="container-w980 w-full bg-white p-[24px]">
+                <p>
+                    <strong>{{ element_1.intro }}</strong>
+                </p>
+                <hr>
+                <p>
+                    {{ element_1.description }}
+                </p>
+                <h5>
+                    {{ element_1.depositor }}
+                </h5>
+                <p>
+                    {{ element_1.depositor_contact }}
+                </p>
+                <h5>
+                    {{ element_1.repository }}
+                </h5>
+                <p>
+                    {{ element_1.repository_contact }}
+
+                </p>
+                <h4 class="text-center" id="definitions">
+                    {{ section_1.title }}&nbsp;<a class="anchor-link" href="#definitions" aria-label="Link to this section: Definitions">#</a>
+                </h4>
+                <p>
+                    {{ section_1.text }}
+                </p>
+                <h4 class="text-center" id="purpose-and-subject-matter-of-the-contract">
+                    {{ section_2.title }}&nbsp;<a class="anchor-link" href="#purpose-and-subject-matter-of-the-contract" aria-label="Link to this section: Purpose and Subject Matter of the Contract">#</a>
+                </h4>
+                {{ section_2.text }}
+
+                <h4 class="text-center" id="description-of-material">
+                    {{ section_3.title }}&nbsp;<a class="anchor-link" href="#description-of-material" aria-label="Link to this section: Description of Material">#</a>
+                </h4>
+                {{ section_3.text }}
+
+                <h4 class="text-center" id="transfer-procedures">
+                    {{ section_4.title }}&nbsp;<a class="anchor-link" href="#transfer-procedures" aria-label="Link to this section: Transfer Procedures">#</a>
+                </h4>
+                {{ section_4.text }}
+
+                <h4 class="text-center" id="rights-and-obligations-of-the-depositor">
+                    {{ section_5.title }}&nbsp;<a class="anchor-link" href="#rights-and-obligations-of-the-depositor" aria-label="Link to this section: Rights and Obligations of the Depositor">#</a>
+                </h4>
+                {{ section_5.text }}
+                <h4 class="text-center" id="rights-and-obligations-of-the-repository">
+                    {{ section_6.title }}&nbsp;<a class="anchor-link" href="#rights-and-obligations-of-the-repository" aria-label="Link to this section: Rights and Obligations of the Repository">#</a>
+                </h4>
+                {{ section_6.text }}
+
+                <h4 class="text-center" id="availability-of-resources">
+                    {{ section_7.title }}&nbsp;<a class="anchor-link" href="#availability-of-resources" aria-label="Link to this section: Availability of Resources">#</a>
+                </h4>
+                {{ section_7.text }}
+
+                <h4 class="text-center" id="withdrawal-of-resources">
+                    {{ section_8.title }}&nbsp;<a class="anchor-link" href="#withdrawal-of-resources" aria-label="Link to this section: Withdrawal of Resources">#</a>
+                </h4>
+                {{ section_8.text }}
+
+                <h4 class="text-center" id="warranty-and-liability">
+                    {{ section_9.title }}&nbsp;<a class="anchor-link" href="#warranty-and-liability" aria-label="Link to this section: Warranty and Liability">#</a>
+                </h4>
+                {{ section_9.text }}
+
+                <h4 class="text-center" id="costs">
+                    {{ section_10.title }}&nbsp;<a class="anchor-link" href="#costs" aria-label="Link to this section: Costs">#</a>
+                </h4>
+                {{ section_10.text }}
+
+                <h4 class="text-center" id="death-of-the-depositor">
+                    {{ section_11.title }}&nbsp;<a class="anchor-link" href="#death-of-the-depositor" aria-label="Link to this section: Death of the Depositor">#</a>
+                </h4>
+                {{ section_11.text }}
+
+                <h4 class="text-center" id="period-of-validity-and-termination">
+                    {{ section_12.title }}&nbsp;<a class="anchor-link" href="#period-of-validity-and-termination" aria-label="Link to this section: Period of Validity and Termination">#</a>
+                </h4>
+                {{ section_12.text }}
+
+                <h4 class="text-center" id="miscellaneous">
+                    {{ section_13.title }}&nbsp;<a class="anchor-link" href="#miscellaneous" aria-label="Link to this section: Miscellaneous">#</a>
+                </h4>
+                {{ section_13.text }}
+
+                <h4 class="text-center" id="jurisdiction">
+                    {{ section_14.title }}&nbsp;<a class="anchor-link" href="#jurisdiction" aria-label="Link to this section: Jurisdiction">#</a>
+                </h4>
+                {{ section_14.text }}
+
+                <h4 class="text-center">
+                    {{ bottom.signatures }}
+                </h4>
+                <p>
+                    <br>
+                    &nbsp;
+                </p>
+
+                <div class="grid grid-cols-12">
+                    <div class="grid-cols-6">
                         <p>
-                            <strong>{{ element_1.intro }}</strong>
+                            <strong>{{ bottom.label_1 }}</strong>
                         </p>
-                        <hr>
-                        <p>
-                            {{ element_1.description }}
+                        <p>________________________<br>
+                            {{ bottom.date_sign }}
                         </p>
-                        <h5>
-                            {{ element_1.depositor }}
-                        </h5>
-                        <p>
-                            {{ element_1.depositor_contact }}
+                    </div>
+                    <div class="grid-cols-6">
+                        <p class="pt-2">
+                            <strong>{{ bottom.label_2 }}</strong>
                         </p>
-                        <h5>
-                            {{ element_1.repository }}
-                        </h5>
-                        <p>
-                            {{ element_1.repository_contact }}
-
+                        <p> ________________________<br>
+                            {{ bottom.date_sign }}
                         </p>
-                        <h4 class="text-center" id="definitions">
-                            {{ section_1.title }}&nbsp;<a class="anchor-link" href="#definitions" aria-label="Link to this section: Definitions">#</a>
-                        </h4>
-                        <p>
-                            {{ section_1.text }}
-                        </p>
-                        <h4 class="text-center" id="purpose-and-subject-matter-of-the-contract">
-                            {{ section_2.title }}&nbsp;<a class="anchor-link" href="#purpose-and-subject-matter-of-the-contract" aria-label="Link to this section: Purpose and Subject Matter of the Contract">#</a>
-                        </h4>
-                        {{ section_2.text }}
-
-                        <h4 class="text-center" id="description-of-material">
-                            {{ section_3.title }}&nbsp;<a class="anchor-link" href="#description-of-material" aria-label="Link to this section: Description of Material">#</a>
-                        </h4>
-                        {{ section_3.text }}
-
-                        <h4 class="text-center" id="transfer-procedures">
-                            {{ section_4.title }}&nbsp;<a class="anchor-link" href="#transfer-procedures" aria-label="Link to this section: Transfer Procedures">#</a>
-                        </h4>
-                        {{ section_4.text }}
-
-                        <h4 class="text-center" id="rights-and-obligations-of-the-depositor">
-                            {{ section_5.title }}&nbsp;<a class="anchor-link" href="#rights-and-obligations-of-the-depositor" aria-label="Link to this section: Rights and Obligations of the Depositor">#</a>
-                        </h4>
-                        {{ section_5.text }}
-                        <h4 class="text-center" id="rights-and-obligations-of-the-repository">
-                            {{ section_6.title }}&nbsp;<a class="anchor-link" href="#rights-and-obligations-of-the-repository" aria-label="Link to this section: Rights and Obligations of the Repository">#</a>
-                        </h4>
-                        {{ section_6.text }}
-
-                        <h4 class="text-center" id="availability-of-resources">
-                            {{ section_7.title }}&nbsp;<a class="anchor-link" href="#availability-of-resources" aria-label="Link to this section: Availability of Resources">#</a>
-                        </h4>
-                        {{ section_7.text }}
-
-                        <h4 class="text-center" id="withdrawal-of-resources">
-                            {{ section_8.title }}&nbsp;<a class="anchor-link" href="#withdrawal-of-resources" aria-label="Link to this section: Withdrawal of Resources">#</a>
-                        </h4>
-                        {{ section_8.text }}
-
-                        <h4 class="text-center" id="warranty-and-liability">
-                            {{ section_9.title }}&nbsp;<a class="anchor-link" href="#warranty-and-liability" aria-label="Link to this section: Warranty and Liability">#</a>
-                        </h4>
-                        {{ section_9.text }}
-
-                        <h4 class="text-center" id="costs">
-                            {{ section_10.title }}&nbsp;<a class="anchor-link" href="#costs" aria-label="Link to this section: Costs">#</a>
-                        </h4>
-                        {{ section_10.text }}
-
-                        <h4 class="text-center" id="death-of-the-depositor">
-                            {{ section_11.title }}&nbsp;<a class="anchor-link" href="#death-of-the-depositor" aria-label="Link to this section: Death of the Depositor">#</a>
-                        </h4>
-                        {{ section_11.text }}
-
-                        <h4 class="text-center" id="period-of-validity-and-termination">
-                            {{ section_12.title }}&nbsp;<a class="anchor-link" href="#period-of-validity-and-termination" aria-label="Link to this section: Period of Validity and Termination">#</a>
-                        </h4>
-                        {{ section_12.text }}
-
-                        <h4 class="text-center" id="miscellaneous">
-                            {{ section_13.title }}&nbsp;<a class="anchor-link" href="#miscellaneous" aria-label="Link to this section: Miscellaneous">#</a>
-                        </h4>
-                        {{ section_13.text }}
-
-                        <h4 class="text-center" id="jurisdiction">
-                            {{ section_14.title }}&nbsp;<a class="anchor-link" href="#jurisdiction" aria-label="Link to this section: Jurisdiction">#</a>
-                        </h4>
-                        {{ section_14.text }}
-
-                        <h4 class="text-center">
-                            {{ bottom.signatures }}
-                        </h4>
-                        <p>
-                            <br>
-                            &nbsp;
-                        </p>
-                        
-                            <div class="grid grid-cols-12">
-                                <div class="grid-cols-6">
-                                    <p>
-                                        <strong>{{ bottom.label_1 }}</strong>
-                                    </p>
-                                    <p>________________________<br>
-                                        {{ bottom.date_sign }}
-                                    </p>
-                                </div>
-                                <div class="grid-cols-6">
-                                    <p class="pt-2">
-                                        <strong>{{ bottom.label_2 }}</strong>
-                                    </p>
-                                    <p> ________________________<br>
-                                        {{ bottom.date_sign }}
-                                    </p>
-                                </div>
-                            </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
+        <div class="w-full flex justify-center">
+            <div class="container-w980 flex w-full bg-white justify-center p-[24px]">
+                <a class="btn btn-arche-blue" href="https://raw.githubusercontent.com/acdh-oeaw/arche-static-text/main/DepositionAgreement/ARCHE_DepositionAgreement.pdf">Download PDF</a>
 
-<div class="w-full flex justify-center pb-20">
-    <div class="grid grid-cols-6 gap-4">
-        <div class="col-span-4 col-start-2">
-            <div class="w-full ">
-                <div class="container-w980">
-                    <div class="flex flex-col gap-8 justify-center">
-                        <a class="btn btn-arche-blue" href="https://raw.githubusercontent.com/acdh-oeaw/arche-static-text/main/DepositionAgreement/ARCHE_DepositionAgreement.pdf">Download PDF</a>
-
-                    </div>
-                </div>
             </div>
         </div>
-    </div>
+
+    </section>
 </div>
 
